2014-09-19  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.31.0-rc1 Released.

2014-09-18 16:08 +0000 [r423349]  Richard Mudgett <rmudgett@digium.com>

	* main/astobj2.c, contrib/scripts/refcounter.py:
	  astobj2.c/refcounter.py: Fix to deal with invalid object refs. *
	  Make astob2 REF_DEBUG output an invalid object line when an
	  invalid ao2 object ref/unref is attempted. This is similar to the
	  constructor/destructor lines. * Fixed refcounter.py to handle
	  skewed objects that have constructor/destructor states. * Made
	  refcounter.py highlight the invalid ao2 object refs by putting
	  them in their own section of the processed output file. * Made
	  refcounter.py highlight unreffing an object by more than one that
	  results in a negative ref count and the object being destroyed.
	  The abnormally destroyed object is reported in the invalid and
	  finalized object sections of the output. Review:
	  https://reviewboard.asterisk.org/r/3971/

2014-09-18 14:37 +0000 [r423276]  George Joseph <george.joseph@fairview5.com>

	* main/config.c, main/manager.c, include/asterisk/config.h: config:
	  bug: Fix SEGV in ast_category_insert when matching category isn't
	  found If you call ast_category_insert with a match category that
	  doesn't exist, the list traverse runs out of 'next' categories
	  and you get a SEGV. This patch adds check for the end-of-list
	  condition and changes the signature to return an int for
	  success/failure indication instead of a void. The only consumer
	  of this function is manager and it was also changed to use the
	  return value. Tested by: George Joseph Review:
	  https://reviewboard.asterisk.org/r/3993/

2014-09-14 15:48 +0000 [r423066]  Walter Doekes <walter+asterisk@wjd.nu>

	* configs/sip.conf.sample: chan_sip: Clarify that sipdebug=yes
	  cannot be undone by the CLI. Document it in sip.conf.
	  ASTERISK-24249 #close Reported by: Avinash Mohod Review:
	  https://reviewboard.asterisk.org/r/3926/
