@@ -1,1 +1,1 @@
-1.8.31.0-rc1
+1.8.31.0
