@@ -1,176 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-1.8.31.0-rc1</title></head>
-<body>
-<h1 align="center"><a name="top">Release Summary</a></h1>
-<h3 align="center">asterisk-1.8.31.0-rc1</h3>
-<h3 align="center">Date: 2014-09-19</h3>
-<h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
-<hr/>
-<h2 align="center">Table of Contents</h2>
-<ol>
-   <li><a href="#summary">Summary</a></li>
-   <li><a href="#contributors">Contributors</a></li>
-   <li><a href="#issues">Closed Issues</a></li>
-   <li><a href="#commits">Other Changes</a></li>
-   <li><a href="#diffstat">Diffstat</a></li>
-</ol>
-<hr/>
-<a name="summary"><h2 align="center">Summary</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This release includes only bug fixes.  The changes included were made only to address problems that have been identified in this release series.  Users should be able to safely upgrade to this version if this release series is already in use.  Users considering upgrading from a previous release series are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p>
-<p>The data in this summary reflects changes that have been made since the previous release, asterisk-1.8.30.0.</p>
-<hr/>
-<a name="contributors"><h2 align="center">Contributors</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release.  For coders, the number is how many of their patches (of any size) were committed into this release.  For testers, the number is the number of times their name was listed as assisting with testing a patch.  Finally, for reporters, the number is the number of issues that they reported that were closed by commits that went into this release.</p>
-<table width="100%" border="0">
-<tr>
-<td width="33%"><h3>Coders</h3></td>
-<td width="33%"><h3>Testers</h3></td>
-<td width="33%"><h3>Reporters</h3></td>
-</tr>
-<tr valign="top">
-<td>
-5 rmudgett<br/>
-4 gtjoseph<br/>
-3 kmoore<br/>
-3 mjordan<br/>
-2 Jeremy Laine<br/>
-1 cloos<br/>
-1 Elazar Broad<br/>
-1 jrose<br/>
-1 newtonr<br/>
-1 wdoekes<br/>
-</td>
-<td>
-1 dimitripietro<br/>
-1 Kilburn<br/>
-1 wdoekes<br/>
-</td>
-<td>
-2 sharky<br/>
-1 amohod<br/>
-1 ateks<br/>
-1 dimitripietro<br/>
-1 ebroad<br/>
-1 maddog<br/>
-1 mjordan<br/>
-</td>
-</tr>
-</table>
-<hr/>
-<a name="issues"><h2 align="center">Closed Issues</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p>
-<h3>Category: Applications/app_dial</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24225">ASTERISK-24225</a>: Dial option z is broken<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421232">421232</a><br/>
-Reporter: dimitripietro<br/>
-Testers: dimitripietro<br/>
-Coders: rmudgett<br/>
-<br/>
-<h3>Category: Channels/chan_sip/General</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24178">ASTERISK-24178</a>: [patch]fromdomainport used even if not set<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421717">421717</a><br/>
-Reporter: ebroad<br/>
-Coders: Elazar Broad<br/>
-<br/>
-<h3>Category: Core/PBX</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24249">ASTERISK-24249</a>: SIP debugs do not stop<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=423066">423066</a><br/>
-Reporter: amohod<br/>
-Coders: wdoekes<br/>
-<br/>
-<h3>Category: Documentation</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24171">ASTERISK-24171</a>: [patch] Provide a manpage for the aelparse utility<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422371">422371</a><br/>
-Reporter: sharky<br/>
-Coders: Jeremy Laine<br/>
-<br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24171">ASTERISK-24171</a>: [patch] Provide a manpage for the aelparse utility<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422376">422376</a><br/>
-Reporter: sharky<br/>
-Coders: Jeremy Laine<br/>
-<br/>
-<h3>Category: General</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24032">ASTERISK-24032</a>: Gentoo compilation emits warning: "_FORTIFY_SOURCE" redefined<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421227">421227</a><br/>
-Reporter: maddog<br/>
-Testers: Kilburn, wdoekes<br/>
-Coders: cloos<br/>
-<br/>
-<h3>Category: Resources/res_musiconhold</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24019">ASTERISK-24019</a>: When a Music On Hold stream starts it restarts at beginning of file.<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421976">421976</a><br/>
-Reporter: ateks<br/>
-Coders: rmudgett<br/>
-<br/>
-<h3>Category: Tests/testsuite</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24211">ASTERISK-24211</a>: testsuite: Fix the dial_LS_options test<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=423006">423006</a><br/>
-Reporter: mjordan<br/>
-Coders: kmoore<br/>
-<br/>
-<h3>Category: Utilities/aelparse</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24171">ASTERISK-24171</a>: [patch] Provide a manpage for the aelparse utility<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422371">422371</a><br/>
-Reporter: sharky<br/>
-Coders: Jeremy Laine<br/>
-<br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24171">ASTERISK-24171</a>: [patch] Provide a manpage for the aelparse utility<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422376">422376</a><br/>
-Reporter: sharky<br/>
-Coders: Jeremy Laine<br/>
-<br/>
-<hr/>
-<a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all changes that went into this release that did not directly close an issue from the issue tracker.  The commits may have been marked as being related to an issue.  If that is the case, the issue numbers are listed here, as well.</p>
-<table width="100%" border="1">
-<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421059">421059</a></td><td>mjordan</td><td>main/file: Move test event to emit PLAYBACK event more consistently</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421125">421125</a></td><td>mjordan</td><td>app_voicemail/app: Remove test events that were duplicated by r421059</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421327">421327</a></td><td>gtjoseph</td><td>func_config: Change 'Not Found' message from ERROR to DEBUG</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421442">421442</a></td><td>kmoore</td><td>AMI Docs: Fix Status channel parameter optionality</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421600">421600</a></td><td>rmudgett</td><td>cli.c: Fix tab completion of "module load" when MALLOC_DEBUG is enabled.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=421799">421799</a></td><td>rmudgett</td><td>res_musiconhold.c: Remove obsolete REF_DEBUG code.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422112">422112</a></td><td>kmoore</td><td>CallerID: Fix parsing of malformed callerid</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422293">422293</a></td><td>mjordan</td><td>LICENSE: Clarify language in Asterisk's LICENSE to allow for linking to UniMRCP</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422439">422439</a></td><td>gtjoseph</td><td>manager: Make WaitEvent action respect eventfilters</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422584">422584</a></td><td>jrose</td><td>Manager: Require read permission for SYSTEM in order to send FullyBooted</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422789">422789</a></td><td>newtonr</td><td>Sounds/BuildSystem: Modifications to include new releases and Japanese language.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=422900">422900</a></td><td>gtjoseph</td><td>config: bug: fix truncation of included config files on permissions error</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=423276">423276</a></td><td>gtjoseph</td><td>config: bug: Fix SEGV in ast_category_insert when matching category isn't found</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/1.8?view=revision&revision=423349">423349</a></td><td>rmudgett</td><td>astobj2.c/refcounter.py: Fix to deal with invalid object refs.</td>
-<td></td></tr></table>
-<hr/>
-<a name="diffstat"><h2 align="center">Diffstat Results</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p>
-<pre>
-LICENSE                       |    2
-apps/app_dial.c               |    2
-apps/app_voicemail.c          |    5 -
-channels/chan_sip.c           |   17 ++--
-configs/sip.conf.sample       |    4 -
-configure.ac                  |    4 -
-contrib/scripts/refcounter.py |   80 ++++++++++++++++----
-doc/aelparse.8                |   28 +++++++
-doc/smsq.8                    |  146 +++++++++++++++++++++++++++++++++++++
-funcs/func_config.c           |    2
-include/asterisk/config.h     |    5 +
-include/asterisk/utils.h      |    9 ++
-main/app.c                    |    1
-main/astobj2.c                |   10 ++
-main/callerid.c               |   63 +++++++---------
-main/channel.c                |   13 ++-
-main/cli.c                    |    2
-main/config.c                 |   68 +++++++++++------
-main/file.c                   |    2
-main/manager.c                |   16 +++-
-main/utils.c                  |   22 +++++
-res/res_musiconhold.c         |   18 ++--
-sounds/Makefile               |    7 +
-sounds/sounds.xml             |   27 ++++++
-tests/test_callerid.c         |  165 ++++++++++++++++++++++++++++++++++++++++++
-tests/test_utils.c            |   98 ++++++++++++++++++++++++
-26 files changed, 702 insertions(+), 114 deletions(-)
-</pre><br/>
-<hr/>
-</body>
-</html>
