@@ -1,244 +1,0 @@
-                                Release Summary
-
-                             asterisk-1.8.31.0-rc1
-
-                                Date: 2014-09-19
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Closed Issues
-    4. Other Changes
-    5. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.8.30.0.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   5 rmudgett               1 dimitripietro          2 sharky                 
-   4 gtjoseph               1 Kilburn                1 amohod                 
-   3 kmoore                 1 wdoekes                1 ateks                  
-   3 mjordan                                         1 dimitripietro          
-   2 Jeremy Laine                                    1 ebroad                 
-   1 cloos                                           1 maddog                 
-   1 Elazar Broad                                    1 mjordan                
-   1 jrose                  
-   1 newtonr                
-   1 wdoekes                
-
-     ----------------------------------------------------------------------
-
-                                 Closed Issues
-
-                                 [Back to Top]
-
-   This is a list of all issues from the issue tracker that were closed by
-   changes that went into this release.
-
-  Category: Applications/app_dial
-
-   ASTERISK-24225: Dial option z is broken
-   Revision: 421232
-   Reporter: dimitripietro
-   Testers: dimitripietro
-   Coders: rmudgett
-
-  Category: Channels/chan_sip/General
-
-   ASTERISK-24178: [patch]fromdomainport used even if not set
-   Revision: 421717
-   Reporter: ebroad
-   Coders: Elazar Broad
-
-  Category: Core/PBX
-
-   ASTERISK-24249: SIP debugs do not stop
-   Revision: 423066
-   Reporter: amohod
-   Coders: wdoekes
-
-  Category: Documentation
-
-   ASTERISK-24171: [patch] Provide a manpage for the aelparse utility
-   Revision: 422371
-   Reporter: sharky
-   Coders: Jeremy Laine
-
-   ASTERISK-24171: [patch] Provide a manpage for the aelparse utility
-   Revision: 422376
-   Reporter: sharky
-   Coders: Jeremy Laine
-
-  Category: General
-
-   ASTERISK-24032: Gentoo compilation emits warning: "_FORTIFY_SOURCE"
-   redefined
-   Revision: 421227
-   Reporter: maddog
-   Testers: Kilburn, wdoekes
-   Coders: cloos
-
-  Category: Resources/res_musiconhold
-
-   ASTERISK-24019: When a Music On Hold stream starts it restarts at
-   beginning of file.
-   Revision: 421976
-   Reporter: ateks
-   Coders: rmudgett
-
-  Category: Tests/testsuite
-
-   ASTERISK-24211: testsuite: Fix the dial_LS_options test
-   Revision: 423006
-   Reporter: mjordan
-   Coders: kmoore
-
-  Category: Utilities/aelparse
-
-   ASTERISK-24171: [patch] Provide a manpage for the aelparse utility
-   Revision: 422371
-   Reporter: sharky
-   Coders: Jeremy Laine
-
-   ASTERISK-24171: [patch] Provide a manpage for the aelparse utility
-   Revision: 422376
-   Reporter: sharky
-   Coders: Jeremy Laine
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author   | Summary                             | Issues     |
-   |          |          |                                     | Referenced |
-   |----------+----------+-------------------------------------+------------|
-   | 421059   | mjordan  | main/file: Move test event to emit  |            |
-   |          |          | PLAYBACK event more consistently    |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | app_voicemail/app: Remove test      |            |
-   | 421125   | mjordan  | events that were duplicated by      |            |
-   |          |          | r421059                             |            |
-   |----------+----------+-------------------------------------+------------|
-   | 421327   | gtjoseph | func_config: Change 'Not Found'     |            |
-   |          |          | message from ERROR to DEBUG         |            |
-   |----------+----------+-------------------------------------+------------|
-   | 421442   | kmoore   | AMI Docs: Fix Status channel        |            |
-   |          |          | parameter optionality               |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | cli.c: Fix tab completion of        |            |
-   | 421600   | rmudgett | "module load" when MALLOC_DEBUG is  |            |
-   |          |          | enabled.                            |            |
-   |----------+----------+-------------------------------------+------------|
-   | 421799   | rmudgett | res_musiconhold.c: Remove obsolete  |            |
-   |          |          | REF_DEBUG code.                     |            |
-   |----------+----------+-------------------------------------+------------|
-   | 422112   | kmoore   | CallerID: Fix parsing of malformed  |            |
-   |          |          | callerid                            |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | LICENSE: Clarify language in        |            |
-   | 422293   | mjordan  | Asterisk's LICENSE to allow for     |            |
-   |          |          | linking to UniMRCP                  |            |
-   |----------+----------+-------------------------------------+------------|
-   | 422439   | gtjoseph | manager: Make WaitEvent action      |            |
-   |          |          | respect eventfilters                |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | Manager: Require read permission    |            |
-   | 422584   | jrose    | for SYSTEM in order to send         |            |
-   |          |          | FullyBooted                         |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | Sounds/BuildSystem: Modifications   |            |
-   | 422789   | newtonr  | to include new releases and         |            |
-   |          |          | Japanese language.                  |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | config: bug: fix truncation of      |            |
-   | 422900   | gtjoseph | included config files on            |            |
-   |          |          | permissions error                   |            |
-   |----------+----------+-------------------------------------+------------|
-   |          |          | config: bug: Fix SEGV in            |            |
-   | 423276   | gtjoseph | ast_category_insert when matching   |            |
-   |          |          | category isn't found                |            |
-   |----------+----------+-------------------------------------+------------|
-   | 423349   | rmudgett | astobj2.c/refcounter.py: Fix to     |            |
-   |          |          | deal with invalid object refs.      |            |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- LICENSE                       |    2
- apps/app_dial.c               |    2
- apps/app_voicemail.c          |    5 -
- channels/chan_sip.c           |   17 ++--
- configs/sip.conf.sample       |    4 -
- configure.ac                  |    4 -
- contrib/scripts/refcounter.py |   80 ++++++++++++++++----
- doc/aelparse.8                |   28 +++++++
- doc/smsq.8                    |  146 +++++++++++++++++++++++++++++++++++++
- funcs/func_config.c           |    2
- include/asterisk/config.h     |    5 +
- include/asterisk/utils.h      |    9 ++
- main/app.c                    |    1
- main/astobj2.c                |   10 ++
- main/callerid.c               |   63 +++++++---------
- main/channel.c                |   13 ++-
- main/cli.c                    |    2
- main/config.c                 |   68 +++++++++++------
- main/file.c                   |    2
- main/manager.c                |   16 +++-
- main/utils.c                  |   22 +++++
- res/res_musiconhold.c         |   18 ++--
- sounds/Makefile               |    7 +
- sounds/sounds.xml             |   27 ++++++
- tests/test_callerid.c         |  165 ++++++++++++++++++++++++++++++++++++++++++
- tests/test_utils.c            |   98 ++++++++++++++++++++++++
- 26 files changed, 702 insertions(+), 114 deletions(-)
-
-     ----------------------------------------------------------------------
