@@ -1,3 +1,7 @@
+2014-09-24  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.31.0 Released.
+
 2014-09-19  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.31.0-rc1 Released.
